@@ -137,10 +137,6 @@ href="mailto:rodsmith@rodsbooks.com">rodsmith@rodsbooks.com</a></p>
     just an example of the inflexibility of certain layout issues within
     rEFInd.</li>
 
-<li>Text mode has a known display glitch: Not all loaders are shown until
-    you use the cursor keys to move down the list, effectively "drawing"
-    the "invisible" tags. This obviously needs to be fixed.</li>
-
 <li>Although the ICNS file format used by rEFInd supports multiple image
     sizes, if a size that rEFInd needs isn't present in the file, rEFInd
     can't use the icon. The ability to scale images to the desired size
